--- a/index.html
+++ b/index.html
@@ -7,10 +7,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script type="text/javascript" src="./public/readData.js"></script>
     <script type="text/javascript" src="./public/pageLayout.js"></script>
+    <script src="lodash.min.js"></script>
+
+    <script src="https://d3js.org/d3.v5.js"></script>
+
+    <script src="http://labratrevenge.com/d3-tip/javascripts/d3.tip.v0.6.3.js"></script>
+
+    <!-- link jquery -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+
     <title>Energy Awareness</title>
 </head>
 
-<body>
+<body onload="pageInit()">
     <div class="topnav">
         <a class="active" href="#home">Top</a>
         <a href="#1">Vis 1</a>
@@ -20,7 +29,7 @@
 
     <div id="mySidebar" class="sidebar">
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">Close</a>
-        <label>
+        <!-- <label>
             Toaster
             <input type="checkbox" value="toaster">
         </label>
@@ -35,7 +44,7 @@
         <label>
             PS4
             <input type="checkbox" value="ps4">
-        </label>
+        </label> -->
     </div>
 
     <div id="content">
