adjsut styling. add labels to week days.

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <div id="calendar">
             <h2>Calendar Overview</h2>
             <p>Does increasing this drastically change where the header is located?</p>
-            <svg viewBox="0 0 100 100">
+            <svg viewBox="0 0 100 100"; font-size="2px";>
                 <g>
 
                 </g>
