Add basic month view, needs work but looks ok for the protoype

--- a/index.html
+++ b/index.html
@@ -28,7 +28,27 @@
     <div id="content">
         <div id="calendar">
             <h2>Calendar Overview</h2>
-            <svg viewBox="0 0 100 20"; font-size="2px";>
+            <svg id="weekOne" viewBox="0 0 100 20"; font-size="2px";>
+                <g>
+
+                </g>
+            </svg>
+            <svg id="weekTwo" viewBox="0 0 100 20"; font-size="2px";>
+                <g>
+
+                </g>
+            </svg>
+            <svg id="weekThree" viewBox="0 0 100 20"; font-size="2px";>
+                <g>
+
+                </g>
+            </svg>
+            <svg id="weekFour" viewBox="0 0 100 20"; font-size="2px";>
+                <g>
+
+                </g>
+            </svg>
+            <svg id="weekFive" viewBox="0 0 100 20"; font-size="2px";>
                 <g>
 
                 </g>
