compress data for alarm clock and random values for other data

--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
 <head>
     <link rel="shortcut icon" href="">
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="spin.css">
     <script src="https://d3js.org/d3.v5.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="lodash.min.js"></script>
+    <script type="text/javascript" src="./spin.js"></script>
+    <script type="text/javascript" src="./public/spinUtils.js"></script>
     <script type="text/javascript" src="./public/readData.js"></script>
     <script type="text/javascript" src="./public/pageLayout.js"></script>
     <script type="text/javascript" src="./public/draw.js"></script>
