--- a/index.html
+++ b/index.html
@@ -5,16 +5,20 @@
     <link rel="shortcut icon" href="">
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="spin.css">
-    <script src="https://d3js.org/d3.v5.js"></script>
+    <link rel="stylesheet" href="cal-heatmap.css">
+    <!-- <script src="https://d3js.org/d3.v3.js"></script> -->
+    <!-- <script src="https://d3js.org/d3.v5.js"></script> -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.6/d3.min.js" charset="utf-8"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="lodash.min.js"></script>
+    <script src="cal-heatmap.min.js"></script>
     <script type="text/javascript" src="./spin.js"></script>
-    <script type="text/javascript" src="./public/spinUtils.js"></script>
-    <script type="text/javascript" src="./public/readData.js"></script>
-    <script type="text/javascript" src="./public/pageLayout.js"></script>
-    <script type="text/javascript" src="./public/draw.js"></script>
-    <script type="text/javascript" src="./public/sideBar.js"></script>
-    <script type="text/javascript" src="./public/calendar.js"></script>
+    <script type="text/javascript" src="./public/PageViewStructure/sideBar.js"></script>
+    <script type="text/javascript" src="./public/PageViewStructure/view.js"></script>
+    <script type="text/javascript" src="./public/PageViewStructure/spinUtils.js"></script>
+    <script type="text/javascript" src="./public/Visualization/areaChart.js"></script>
+    <script type="text/javascript" src="./public/Visualization/calendar.js"></script>
+    <script type="text/javascript" src="./public/data.js"></script>
 
     <script src="http://labratrevenge.com/d3-tip/javascripts/d3.tip.v0.6.3.js"></script>
 
@@ -24,11 +28,13 @@
     <title>Energy Awareness</title>
 </head>
 
-
 <body onload="pageInit()">
 
     <div id="mySidebar" class="sidebar">
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">Close</a>
+    </div>
+
+    <div id="cal-heatmap">
     </div>
 
     <div id="content">
