update cal-heatmap library to use d3 v5

--- a/index.html
+++ b/index.html
@@ -6,9 +6,8 @@
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="spin.css">
     <link rel="stylesheet" href="cal-heatmap.css">
-    <!-- <script src="https://d3js.org/d3.v3.js"></script> -->
-    <!-- <script src="https://d3js.org/d3.v5.js"></script> -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.6/d3.min.js" charset="utf-8"></script>
+    <script src="https://d3js.org/d3.v5.js"></script>
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.6/d3.min.js" charset="utf-8"></script> -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="lodash.min.js"></script>
     <script src="cal-heatmap.min.js"></script>
@@ -37,8 +36,7 @@
 
 
     <div id="content">
-        <div id="calendar">
-            
+        <div>
             <h2>Calendar Overview</h2>
             <div id="cal-heatmap">
             </div>
