add code to format data into a kind readable by the calendar vis.

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
 
     <div id="content">
-        <div>
+        <div id="calendar">
             <h2>Calendar Overview</h2>
             <div id="cal-heatmap">
             </div>
