added initial code for stacked barchart update to the view as ewll as calendar. add started html files for potential other pages.

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <script type="text/javascript" src="./public/PageViewStructure/spinUtils.js"></script>
     <script type="text/javascript" src="./public/Visualization/areaChart.js"></script>
     <script type="text/javascript" src="./public/Visualization/calendar.js"></script>
+    <script type="text/javascript" src="./public/Visualization/StackedBar.js"></script>
     <script type="text/javascript" src="./public/data.js"></script>
 
     <script src="http://labratrevenge.com/d3-tip/javascripts/d3.tip.v0.6.3.js"></script>
@@ -46,7 +47,7 @@
         <div id="stacked-bar">
             <svg id="stackedBarSvg">
                 <g>
-                    <rect width="300" height="100" style="fill:rgb(0,0,255);stroke-width:3;stroke:rgb(0,0,0)" />
+<!--                    <rect width="300" height="100" style="fill:rgb(0,0,255);stroke-width:3;stroke:rgb(0,0,0)" />-->
                 </g>
             </svg>
         </div>
@@ -58,10 +59,10 @@
     </div>
 
     <div class="topnav">
-        <a class="active" href="#home">Top</a>
-        <a href="#1">Vis 1</a>
-        <a href="#2">Vis 2</a>
-        <a href="#3">Vis 3</a>
+        <a class="active" href="index.html">Home</a>
+        <a href="tutorial.html">Tutorial</a>
+        <a href="https://github.com/gitdaddy/CS5890_arrow_dynamics_vis/blob/master/process.md" target ="_blank" >Process File</a>
+<!--        <a href="#3">Vis 3</a>-->
     </div>
 
 
